@@ -5,8 +5,8 @@ class TaobaoRequestException(Exception):
         self.code = code
         self.msg  = msg
         self.sub_code  = sub_code
-        self.sub_msg   = sub_msg
-        self.message   = sub_msg
+        self.sub_msg   = sub_msg 
+        self.message   = sub_msg or sub_code or msg  or code
 
     def __str__(self):
         return '(%s,%s,%s,%s)'%(str(self.code),self.msg,self.sub_code,self.sub_msg)
